k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "goserver"
  labels: # eu posso ter vários Pod com a mesma label, assim posso filtras os meus pods 
    app: "goserver"
spec:
  containers:
    - name: "goserver"
      image : "ronaldoapsilva85/hello-go:latest"
