k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  replicas: 4
  serviceName: mysql-h # quando o Statefulset for criado, com o serviceName, ele sabe que existe um serviço o mysql-h criado, com clusteIP
  selector:
      matchLabels:
        app: mysql # o mysql-service-h.yaml fai selecionar esse StatefulSet através desse valor
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-volume # o nome do volume que esta no volumeClaimTemplates

  volumeClaimTemplates:
  - metadata:
      name: mysql-volume
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
